# target_install_package.cmake

./: .cmake-format.py  .gitignore  .yamllint  AGENTS.md  CMakeLists.txt  CMakePresets.json  CPack-Tutorial.md  CollectRuntimeDeps.cmake  LICENSE  README.md  TODO  build_all_examples.sh  collect_rdeps.cmake  conanfile.py  cpack_example_experimental.md  documentation-audit-findings.md  export_container.cmake  export_cpack.cmake  install_package_helpers.cmake  target_configure_cpack.cmake  target_configure_sources.cmake  target_install_package.cmake
examples/: CMakeLists.txt  CMakePresets.json  CheckCompilerSupport.cmake  README.md  build_all_examples.sh  check_cxx_modules_support.cmake  run_rpath_prefix_override_test.cmake  test_examples_main.cpp  test_math_modules_consumer.cpp  test_sdk_consumer.cpp  test_sdk_direct_consumer.cpp  test_sdk_hybrid_consumer.cpp  test_source_package_consumer.cpp  test_source_package_modules_consumer.cpp  verify_binary_linking.sh  verify_sdk_example_contracts.cmake
examples/OCI/: CMakePresets.json
examples/basic-interface/: CMakeLists.txt  README.md
examples/basic-shared/: CMakeLists.txt  README.md
examples/basic-shared/src/: string_utils.cpp
examples/basic-source-package/: CMakeLists.txt  README.md
examples/basic-source-package/src/: arithmetic.cpp
examples/basic-static/: CMakeLists.txt  README.md
examples/basic-static/src/: math.cpp
examples/basic-symbol-stripping/: CMakeLists.txt  README.md
examples/basic-symbol-stripping/scripts/: strip_with_debuglink.sh
examples/basic-symbol-stripping/src/: vector_math.cpp  vector_math.h  vector_tool.cpp
examples/component-dependencies/: CMakeLists.txt  README.md
examples/component-dependencies/src/: core.cpp
examples/components/: CMakeLists.txt  README.md
examples/components-same-export/: CMakeLists.txt  README.md
examples/components-same-export/src/: asset_converter.cpp  dev_tools.cpp  media_core.cpp  storage.cpp
examples/components/src/: dev_tools.cpp
examples/configure-files/: CMakeLists.txt  README.md
examples/configure-files/src/: config_lib.cpp
examples/container-dynamic/: CMakeLists.txt  compose.yaml.in
examples/container-dynamic/cmake/: import_containers.cmake
examples/container-dynamic/scripts/: run_containers.sh.in
examples/container-dynamic/src/: app1.cpp  app2.cpp  app3.cpp
examples/container-workflow/: CMakeLists.txt  CMakePresets.json  README.md
examples/container-workflow/scripts/: build-containers.sh  container-import.sh  systemd-deploy.sh
examples/container-workflow/src/: core.cpp  main.cpp  tool.cpp
examples/container-workflow/systemd/: webapp.nspawn.in  webapp.service.in
examples/cpack-basic/: CMakeLists.txt  README.md
examples/cpack-basic/src/: mylib.cpp  tool.cpp  (+1 more)
examples/cpack-signed/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  verify_template.sh.in
examples/custom-alias/: CMakeLists.txt  README.md
examples/cxx-modules/: CMakeLists.txt  README.md
examples/cxx-modules-partitions/: .clangd  CMakeLists.txt  CMakePresets.json  README.md
examples/dependency-aggregation/: CMakeLists.txt  README.md
examples/export-container-example/: CMakeLists.txt  README.md
examples/integrated-example/: CMakeLists.txt  README.md
examples/minimal-container/: CMakeLists.txt  podman-compose-test.yml  podman-compose.yml
examples/module-partitions/: CMakeLists.txt  README.md
examples/multi-config/: CMakeLists.txt  README.md
examples/multi-cpack/: CMakeLists.txt  README.md
examples/multi-target/: CMakeLists.txt  README.md
examples/rpath-control/: CMakeLists.txt
examples/rpath-example/: CMakeLists.txt  README.md
examples/sdk/: CMakeLists.txt  README.md
examples/sdk-hybrid/: CMakeLists.txt  README.md
examples/source-package-modules/: CMakeLists.txt  README.md
tests/: CMakeLists.txt  README.md  get_cpm.cmake  main.cpp  run-all-tests.sh  src1.cpp  src2.cpp  src3.cpp  src4.cpp
tests/cmake/: assert_path_exists.cmake  proof_additional_files_components_test.cmake  proof_additional_targets_components_test.cmake  proof_component_find_package_test.cmake  proof_cpack_component_metadata_test.cmake  proof_cpack_native_component_dependencies_test.cmake  proof_cpack_single_component_filter_test.cmake  proof_cps_old_cmake_guard_test.cmake  proof_cps_package_info_test.cmake  proof_executable_configure_sources_test.cmake  proof_export_alias_conflict_test.cmake  proof_gpg_signing_methods_test.cmake  proof_helpers.cmake  proof_namelink_component_test.cmake  proof_sbom_install_test.cmake  proof_sbom_metadata_conflict_test.cmake  proof_sbom_missing_gate_test.cmake  proof_sbom_old_cmake_guard_test.cmake  proof_sbom_subdirectory_scope_test.cmake  proof_signed_verifier_key_test.cmake  proof_space_source_dir_test.cmake  proof_strict_validation_test.cmake  proof_substitution_mode_variables_test.cmake  proof_unknown_arguments_test.cmake  proof_versioned_find_package_test.cmake  run_component_dependencies_test.cmake  run_installed_consumer_test.cmake  run_layout_matrix_test.cmake  run_source_package_export_test.cmake  run_source_package_module_library_test.cmake  run_source_package_modules_test.cmake  run_source_package_object_test.cmake  run_source_package_test.cmake  shared1-config.cmake.in.backup  tests-config.cmake.in
tests/common/: package-validation.sh  test-helpers.sh
tests/component-dependencies/: CMakeLists.txt
tests/consumer/: CMakeLists.txt  main.cpp
tests/cpack-regression/: README.md  run-all-tests.sh  test-custom-generators.sh  test-single-component.sh
tests/layout-matrix/: CMakeLists.txt
tests/packaging/: README.md  build-packages.sh  test-packages.sh
tests/producer0/: CMakeLists.txt  main.cpp
tests/proofs/: prove_build_minimal_container.sh  prove_collect_runtime_deps.sh  prove_container_flow.sh  prove_cpack_external_container_archive.sh  prove_external_container_package.sh
tests/source-package/: CMakeLists.txt
tests/source-package-export/: CMakeLists.txt
tests/source-package-module-library/: CMakeLists.txt
tests/source-package-modules/: CMakeLists.txt
tests/source-package-object/: CMakeLists.txt
(+247 files in other folders)
